--- a/cpp_module/Cpp_01/ex03/Makefile
+++ b/cpp_module/Cpp_01/ex03/Makefile
@@ -1,8 +1,7 @@
 NAME = Zombie
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
-SRCS = main.cpp Weapon.cpp 
-# SRCS = main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
+SRCS = main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
 OBJS = ${SRCS:.cpp=.o}
 
 all : $(NAME)
