--- a/cpp_module/Cpp_01/ex05/Makefile
+++ b/cpp_module/Cpp_01/ex05/Makefile
@@ -1,7 +1,7 @@
-NAME = Zombie
+NAME = harl
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
-SRCS = main.cpp Zombie.cpp zombieHorde.cpp
+SRCS = main.cpp Harl.cpp
 OBJS = ${SRCS:.cpp=.o}
 
 all : $(NAME)
