--- a/cpp_module/Cpp_02/.vscode/settings.json
+++ b/cpp_module/Cpp_02/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
 	"files.associations": {
-		"iosfwd": "cpp",
+		"iostream": "cpp",
 		"__bit_reference": "cpp",
 		"__config": "cpp",
 		"__debug": "cpp",
@@ -37,7 +37,7 @@
 		"functional": "cpp",
 		"initializer_list": "cpp",
 		"ios": "cpp",
-		"iostream": "cpp",
+		"iosfwd": "cpp",
 		"istream": "cpp",
 		"iterator": "cpp",
 		"limits": "cpp",
@@ -59,12 +59,6 @@
 		"typeinfo": "cpp",
 		"unordered_map": "cpp",
 		"utility": "cpp",
-		"vector": "cpp",
-		"deque": "cpp",
-		"fstream": "cpp",
-		"iomanip": "cpp",
-		"stack": "cpp",
-		"__tree": "cpp",
-		"map": "cpp"
+		"vector": "cpp"
 	}
 }
