--- a/cpp_module/Cpp_03/ex03/Makefile
+++ b/cpp_module/Cpp_03/ex03/Makefile
@@ -1,7 +1,7 @@
 NAME = ClapTrap
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
-SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Wshadow
+SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 OBJS = ${SRCS:.cpp=.o}
 
 all : $(NAME)
