--- a/cpp_module/Cpp_04/ex02/Makefile
+++ b/cpp_module/Cpp_04/ex02/Makefile
@@ -1,7 +1,7 @@
 NAME = Animal
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
-SRCS = Animal.cpp Dog.cpp Cat.cpp main.cpp WrongAnimal.cpp WrongCat.cpp
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
+SRCS = Animal.cpp Dog.cpp Cat.cpp main.cpp Brain.cpp
 OBJS = ${SRCS:.cpp=.o}
 
 all : $(NAME)
