--- a/cpp_module/Cpp_04/ex03/Makefile
+++ b/cpp_module/Cpp_04/ex03/Makefile
@@ -1,6 +1,6 @@
 NAME = Animal
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 SRCS = Animal.cpp Dog.cpp Cat.cpp main.cpp Brain.cpp
 OBJS = ${SRCS:.cpp=.o}
 
